[metadata]
name = kripweb
version = 0.0.3
author = vinkami
author_email = vinkami.krip@gmail.com
description = A web framework module made by vinkami
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vinkami/kripweb
project_urls =
    Docs = https://kripweb.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.9
install_requires =
    Jinja2>=3.0.1