[metadata]
name = kripweb
version = 0.0.4
author = vinkami
author_email = vinkami.krip@gmail.com
description = A web framework module made by vinkami
long_description = file: docs/index.md
long_description_content_type = text/markdown
url = https://github.com/vinkami/kripweb
project_urls =
    Docs = https://kripweb.readthedocs.io/en/latest/
    Source = https://github.com/vinkami/kripweb
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.10
install_requires =
    Jinja2>=3.0.1